apps/namespaces/agd/enrolment-form/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enrollment-form
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: enrollment-form
