apps/namespaces/agd/enrolment-form/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enrolment-form
  annotations:
    external-dns.alpha.kubernetes.io/target: sokh.duckdns.org
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - enroll.agd.org.au
    secretName: enrollment-form-tls
  rules:
  - host: enroll.agd.org.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: enrollment-form
            port:
              number: 80
